@@ -1,3 +1,10 @@
+2006-10-31  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/include/sys/os7/timer.h: timeout must lock the queue lock and not
+	  the structure lock to avoid timer procedures running concurrent with
+	  put or service routines.
+	* src/kernel/os7compat.c: the timeout is a toid_t (int) not a ulong.
+
 2006-10-30  Brian Bidulock  <bidulock@openss7.org>
 
 	* tests/local.at: added ability to sync between test cases
